[Fix Bug 909965] Fix language select box cut-off on smaller screens.

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -586,7 +586,7 @@ footer#colophon {
             font-family: "Open Sans Light", sans-serif;
             font-style: italic;
             color: #4d4e53;
-            line-height: 1;
+            line-height: 1.5;
             border: 0;
             cursor: pointer;
         }
